test_regress/t/t_split_var_1_bad.out
%Warning-SPLITVAR: t/t_split_var_1_bad.v:7: Unexpected location for split_var pragma.
                                          : ... In instance t
     /*verilator split_var*/ 
     ^~~~~~~~~~~~~~~~~~~~~~~
                   ... Use "/* verilator lint_off SPLITVAR */" and lint_on around source to disable this message.
%Warning-SPLITVAR: t/t_split_var_1_bad.v:33: Variable 'cannot_split' will not be split because index cannot be determined statically.
                                           : ... In instance t.i_sub0
     rd_data = cannot_split[addr];
                            ^~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:10: Pragma split_var is specified on a variable whose type is unsupported or public. Packed portion must be an aggregate type of bit or logic.
                                           : ... In instance t
   real should_show_warning0;                 /*verilator split_var*/ 
        ^~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:11: Pragma split_var is specified on a variable whose type is unsupported or public. Packed portion must be an aggregate type of bit or logic.
                                           : ... In instance t
   string should_show_warning1[0:2];          /*verilator split_var*/ 
          ^~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:12: Pragma split_var is specified on a variable whose type is unsupported or public. Packed portion must be an aggregate type of bit or logic.
                                           : ... In instance t
   wire   should_show_warning2;               /*verilator split_var*/ 
          ^~~~~~~~~~~~~~~~~~~~
%Warning-SPLITVAR: t/t_split_var_1_bad.v:42: Variable 'cannot_split' will not be split because its bit range cannot be determined statically.
                                           : ... In instance t.i_sub1
     rd_data = cannot_split[addr];
                           ^
%Error: Exiting due to
